--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 id="title">Customer Survey</h1>
-    <p id="description">Tell us what you think about our services</p>
+    <p id="description">Tell us what you think about our services...</p>
 
     <form id="survey-form">
         <fieldset>
